💄 fix: image on mobile (blog list and blog detail)

--- a/src/components/atomic/mdx-image/mdx-image.module.scss
+++ b/src/components/atomic/mdx-image/mdx-image.module.scss
@@ -7,6 +7,10 @@
 
   img {
     box-shadow: 2px 4px 12px 0px rgba(0, 0, 0, 0.1);
+
+    @media only screen and (max-width: 720px) {
+      width: 100%;
+    }
   }
 
   .alt-text {
