--- a/src/styles/Blog.module.scss
+++ b/src/styles/Blog.module.scss
@@ -1,16 +1,27 @@
 .headings {
-  margin-bottom: 64px;
+  margin-bottom: 4rem;
   font-family: Nunito Sans;
   font-weight: 700;
   text-transform: uppercase;
   color: var(--text-headings);
-  font-size: 30px;
-  letter-spacing: 2px;
+  font-size: 1.875rem;
+  letter-spacing: 0.125rem;
+  margin-top: 0;
+
+  @media only screen and (max-width: 720px) {
+    margin-bottom: 2 rem;
+  }
 }
 
 .cardContainer {
   display: grid;
   grid-template-columns: auto auto auto;
-  column-gap: 48px;
-  row-gap: 64px;
+  column-gap: 3rem;
+  row-gap: 4rem;
+
+  @media only screen and (max-width: 720px) {
+    grid-template-columns: auto;
+    row-gap: 2rem;
+    margin-bottom: 3.5rem;
+  }
 }
